@@ -42,7 +42,10 @@ compileJava.options.encoding = 'UTF-8'
 compileTestJava.options.encoding = 'UTF-8'
 javadoc.options.encoding = 'UTF-8'
 
-mainClassName = 'io.calimero.server.Launcher'
+application {
+    mainModule = "io.calimero.server"
+    mainClass = 'io.calimero.server.Launcher'
+}
 
 run {
     // for passing program arguments, use -Dexec.args="..."
@@ -77,12 +80,20 @@ tasks.withType(Javadoc) {
 
 jar {
 	manifest {
-		attributes 'Main-Class': mainClassName
+		attributes 'Main-Class': application.mainClass
 	}
 }
 
 test {
 	useJUnitPlatform()
+}
+
+tasks.withType(JavaExec) { 
+    jvmArgs += [ 
+            "--add-reads", "io.calimero.core=io.calimero.server", // @LinkEvent
+            "--add-opens", "io.calimero.server/io.calimero.server.gateway=io.calimero.core", // @LinkEvent
+            "--add-reads", "io.calimero.serial.provider.rxtx=ALL-UNNAMED",
+            "--add-reads", "io.calimero.usb=ALL-UNNAMED" ] 
 }
 
 dependencies {
